--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <p>I started following the anti-extradition bill protests in Hong Kong intently since July 1, 2019 —
       checking the news, reading up on forums and watching livestreams — every moment awake, or half-awake.
-      This daily act has become a huge part of who I am, as if by doing so I could bridge the immense disconnect and guilt I feel 8,000 miles away from
-      an event and people I deeply care about.
+      This daily act has become a huge part of who I am, as if by doing so I could bridge the immense disconnect
+      and guilt I feel 8,000 miles away from events and people I deeply care about.
       <i>What does it really means for something to be constantly on your mind?</i>
       <br><br>
       I collected screenshots from September 11, 2019*, taking a photo and recording information
@@ -25,7 +25,7 @@
       or came across information on my social media accounts.
     </p>
     <p id="info">
-      The following visulization contains: <span id="total">0</span> entries, among which <span id="direct">0</span> are from direct search,
+      The following visulization contains: <span id="total">0</span> entries, <span id="direct">0</span> are from direct search,
       <span id="social">0</span> are from browsing social media, and <span id="forward">0</span> are forwarded from friends or family.
     </p>
     <div id="mySketch">
